Added Jest tests

--- a/TODO
+++ b/TODO
@@ -8,3 +8,5 @@
     ☐ Changelog @created(19-04-05 22:38)
     ☐ Github release @created(19-04-05 22:38)
     ☐ Build and alias it @created(19-04-05 22:40)
+✔ Add test for jest @created(19-04-06 23:36) @done(19-04-07 12:41)
+  For more info how to do this look here: D:\Projects\my-app\src
