Revert "ci(deploy): Now only deploying chnages on release branch"
This reverts commit 848c71e633f01efd2225af8a0b54ee94148e5144.

--- a/TODO
+++ b/TODO
@@ -1,13 +1,12 @@
-DevOps:
-  ✔ Add CircleCI support @created(19-04-05 22:36) @done(19-04-07 17:00)
-    ✔ Lint files  @created(19-04-05 22:36) @done(19-04-07 17:00)
-    ✔ Run Test (if applicable) @created(19-04-05 22:36) @done(19-04-07 17:00)
-    ✔ Remove automatic aliasing @created(19-04-05 22:37) @done(19-04-07 17:00)
-    ✔ Try to build it @created(19-04-05 22:40) @done(19-04-07 17:00)
-    ✔ Use semantic-release to determen if we should release a new version @created(19-04-05 22:37) @done(19-04-07 17:00)
-      ✔ package.json bump @created(19-04-05 22:38) @done(19-04-07 17:00)
-      ✔ Changelog @created(19-04-05 22:38) @done(19-04-07 17:00)
-      ✔ Github release @created(19-04-05 22:38) @done(19-04-07 17:00)
-      ✔ Build and alias it @created(19-04-05 22:40) @done(19-04-07 17:00)
-  ✔ Add test for jest @created(19-04-06 23:36) @done(19-04-07 12:41)
-    For more info how to do this look here: D:\Projects\my-app\src
+☐ Add CircleCI support @created(19-04-05 22:36)
+  ☐ Lint files  @created(19-04-05 22:36)
+  ☐ Run Test (if applicable) @created(19-04-05 22:36)
+  ☐ Remove automatic aliasing @created(19-04-05 22:37)
+  ☐ Try to build it @created(19-04-05 22:40)
+  ☐ Use semantic-release to determen if we should release a new version @created(19-04-05 22:37)
+    ☐ package.json bump @created(19-04-05 22:38)
+    ☐ Changelog @created(19-04-05 22:38)
+    ☐ Github release @created(19-04-05 22:38)
+    ☐ Build and alias it @created(19-04-05 22:40)
+✔ Add test for jest @created(19-04-06 23:36) @done(19-04-07 12:41)
+  For more info how to do this look here: D:\Projects\my-app\src
