--- a/TODO
+++ b/TODO
@@ -1,12 +1,12 @@
-☐ Add CircleCI support @created(19-04-05 22:36)
-  ☐ Lint files  @created(19-04-05 22:36)
-  ☐ Run Test (if applicable) @created(19-04-05 22:36)
-  ☐ Remove automatic aliasing @created(19-04-05 22:37)
-  ☐ Try to build it @created(19-04-05 22:40)
-  ☐ Use semantic-release to determen if we should release a new version @created(19-04-05 22:37)
-    ☐ package.json bump @created(19-04-05 22:38)
-    ☐ Changelog @created(19-04-05 22:38)
-    ☐ Github release @created(19-04-05 22:38)
-    ☐ Build and alias it @created(19-04-05 22:40)
+✔ Add CircleCI support @created(19-04-05 22:36) @done(19-04-07 17:49)
+  ✔ Lint files  @created(19-04-05 22:36) @done(19-04-07 17:49)
+  ✔ Run Test (if applicable) @created(19-04-05 22:36) @done(19-04-07 17:49)
+  ✔ Remove automatic aliasing @created(19-04-05 22:37) @done(19-04-07 17:49)
+  ✔ Try to build it @created(19-04-05 22:40) @done(19-04-07 17:49)
+  ✔ Use semantic-release to determen if we should release a new version @created(19-04-05 22:37) @done(19-04-07 17:49)
+    ✔ package.json bump @created(19-04-05 22:38) @done(19-04-07 17:49)
+    ✔ Changelog @created(19-04-05 22:38) @done(19-04-07 17:49)
+    ✔ Github release @created(19-04-05 22:38) @done(19-04-07 17:49)
+    ✔ Build and alias it @created(19-04-05 22:40) @done(19-04-07 17:49)
 ✔ Add test for jest @created(19-04-06 23:36) @done(19-04-07 12:41)
   For more info how to do this look here: D:\Projects\my-app\src
