feat(Home): NICE
BREAKING CHANGE: Add dotenv

--- a/TODO
+++ b/TODO
@@ -10,3 +10,4 @@
     ✔ Build and alias it @created(19-04-05 22:40) @done(19-04-07 17:49)
 ✔ Add test for jest @created(19-04-06 23:36) @done(19-04-07 12:41)
   For more info how to do this look here: D:\Projects\my-app\src
+☐ Add .env to storybook @created(19-04-13 13:03)
